feat: implement responsive forum section with dj_richard avatars and speech bubbles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,6 +116,121 @@
         </div>
     </section>
 
+    <!-- Forum Section -->
+    <section id="forum-section" class="forum-section">
+        <div class="news-portal-wrapper" style="display: block;"> <!-- Reusing wrapper for width, overriding grid -->
+            <div class="section-header flex-header" style="margin-bottom: 25px; padding: 0 10px;">
+                <h3 class="portal-title" style="margin:0"><i class="fas fa-comments"></i> Fórum de Discussões</h3>
+                <div class="forum-controls">
+                    <button class="nav-btn prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="nav-btn next"><i class="fas fa-chevron-right"></i></button>
+                </div>
+            </div>
+            
+            <div class="forum-grid">
+                <!-- Forum Card 1 -->
+                <article class="forum-card">
+                    <div class="forum-avatar">
+                        <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=DJ_Richard&direction=2&head_direction=3&action=std&gesture=sml" alt="DJ_Richard">
+                    </div>
+                    <div class="forum-content">
+                        <div class="speech-bubble">
+                            <p class="topic-title">Como personalizar seu perfil no One Habbo?</p>
+                        </div>
+                        <div class="topic-meta">
+                            <span class="author-name">DJ_Richard</span>
+                            <span class="topic-cat">Tutoriais</span>
+                        </div>
+                    </div>
+                    <div class="reply-badge">68</div>
+                </article>
+
+                <!-- Forum Card 2 -->
+                <article class="forum-card">
+                    <div class="forum-avatar">
+                        <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=DJ_Richard&direction=2&head_direction=3&action=wav&gesture=sml" alt="DJ_Richard">
+                    </div>
+                    <div class="forum-content">
+                        <div class="speech-bubble">
+                            <p class="topic-title">O que voce faria se ganhasse na loteria?</p>
+                        </div>
+                        <div class="topic-meta">
+                            <span class="author-name">DJ_Richard</span>
+                            <span class="topic-cat">Off-Topic</span>
+                        </div>
+                    </div>
+                    <div class="reply-badge">12</div>
+                </article>
+
+                <!-- Forum Card 3 -->
+                <article class="forum-card">
+                    <div class="forum-avatar">
+                        <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=DJ_Richard&direction=2&head_direction=3&action=std&gesture=nrm" alt="DJ_Richard">
+                    </div>
+                    <div class="forum-content">
+                        <div class="speech-bubble">
+                            <p class="topic-title">Procuro parceiros para eventos!</p>
+                        </div>
+                        <div class="topic-meta">
+                            <span class="author-name">DJ_Richard</span>
+                            <span class="topic-cat">Eventos</span>
+                        </div>
+                    </div>
+                    <div class="reply-badge">5</div>
+                </article>
+                
+                 <!-- Forum Card 4 -->
+                 <article class="forum-card">
+                    <div class="forum-avatar">
+                        <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=DJ_Richard&direction=2&head_direction=3&action=std&gesture=sml" alt="DJ_Richard">
+                    </div>
+                    <div class="forum-content">
+                        <div class="speech-bubble">
+                            <p class="topic-title">Avaliem meu quarto novo!</p>
+                        </div>
+                        <div class="topic-meta">
+                            <span class="author-name">DJ_Richard</span>
+                            <span class="topic-cat">Promoções</span>
+                        </div>
+                    </div>
+                    <div class="reply-badge">23</div>
+                </article>
+                 <!-- Forum Card 5 -->
+                 <article class="forum-card">
+                    <div class="forum-avatar">
+                        <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=DJ_Richard&direction=2&head_direction=3&action=wav&gesture=sml" alt="DJ_Richard">
+                    </div>
+                    <div class="forum-content">
+                        <div class="speech-bubble">
+                            <p class="topic-title">Músicas que marcaram época</p>
+                        </div>
+                        <div class="topic-meta">
+                            <span class="author-name">DJ_Richard</span>
+                            <span class="topic-cat">Rádio</span>
+                        </div>
+                    </div>
+                    <div class="reply-badge">8</div>
+                </article>
+                 <!-- Forum Card 6 -->
+                 <article class="forum-card">
+                    <div class="forum-avatar">
+                        <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=DJ_Richard&direction=2&head_direction=3&action=std&gesture=nrm" alt="DJ_Richard">
+                    </div>
+                    <div class="forum-content">
+                        <div class="speech-bubble">
+                            <p class="topic-title">Dúvidas sobre o projeto One Habbo</p>
+                        </div>
+                        <div class="topic-meta">
+                            <span class="author-name">DJ_Richard</span>
+                            <span class="topic-cat">Suporte</span>
+                        </div>
+                    </div>
+                    <div class="reply-badge">42</div>
+                </article>
+            </div>
+        </div>
+    </section>
+
     <!-- Main Content Stream (Placeholder) -->
     <main style="padding: 2rem; max-width: 1200px; width: 100%;">
         <!-- Modules will be added here -->
