feat: implement responsive ranking section

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -231,6 +231,75 @@
         </div>
     </section>
 
+    </section>
+
+    <!-- Ranking Section -->
+    <section id="ranking-section" class="ranking-section">
+        <div class="news-portal-wrapper" style="display: block;">
+            <div class="ranking-grid">
+                
+                <!-- Rank 1: Forum -->
+                <div class="ranking-card">
+                    <div class="rank-header">
+                        <h3><i class="fas fa-comments"></i> RANKING DO FÓRUM</h3>
+                        <i class="fas fa-cog animated-cog"></i>
+                    </div>
+                    <div class="rank-body">
+                        <span class="rank-number">1</span>
+                        <div class="rank-avatar">
+                            <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=DJ_Richard&direction=2&head_direction=3&action=wav&gesture=sml&size=l" alt="Top User">
+                        </div>
+                        <div class="rank-info">
+                            <span class="rank-username">DJ_Richard</span>
+                            <span class="rank-stat">156 comentários</span>
+                        </div>
+                    </div>
+                    <button class="rank-btn">VER LISTA COMPLETA</button>
+                </div>
+
+                <!-- Rank 2: News -->
+                <div class="ranking-card">
+                    <div class="rank-header">
+                        <h3><i class="fas fa-newspaper"></i> RANKING DE NOTÍCIAS</h3>
+                        <i class="fas fa-cog animated-cog"></i>
+                    </div>
+                    <div class="rank-body">
+                        <span class="rank-number">1</span>
+                        <div class="rank-avatar">
+                            <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=OneHabbo&direction=2&head_direction=3&action=std&gesture=sml&size=l" alt="Top User">
+                        </div>
+                        <div class="rank-info">
+                            <span class="rank-username">OneHabbo</span>
+                            <span class="rank-stat">42 publicações</span>
+                        </div>
+                    </div>
+                    <button class="rank-btn">VER LISTA COMPLETA</button>
+                </div>
+
+                <!-- Rank 3: Presence (Presencial) -->
+                <div class="ranking-card">
+                    <div class="rank-header">
+                        <h3><i class="fas fa-stopwatch"></i> RANKING PRESENCIAL</h3>
+                        <i class="fas fa-cog animated-cog"></i>
+                    </div>
+                    <div class="rank-body">
+                        <span class="rank-number">1</span>
+                        <div class="rank-avatar">
+                             <!-- Using a different avatar/look -->
+                            <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Visitante&direction=2&head_direction=3&action=crr=667&gesture=sml&size=l" alt="Top User">
+                        </div>
+                        <div class="rank-info">
+                            <span class="rank-username">Visitante</span>
+                            <span class="rank-stat">Online agora</span>
+                        </div>
+                    </div>
+                    <button class="rank-btn">VER LISTA COMPLETA</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- Main Content Stream (Placeholder) -->
     <main style="padding: 2rem; max-width: 1200px; width: 100%;">
         <!-- Modules will be added here -->
