refactor: substituição da seção de prêmios pelo ranking musical top 6-10

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -363,24 +363,52 @@
                     </div>
                 </div>
 
-                <!-- Right: Awards -->
-                <div class="awards-col">
+                <!-- Right: Top Music #6-#10 -->
+                <div class="music-secondary-col">
                     <div class="section-header flex-header" style="margin-bottom: 20px;">
-                         <h3 class="portal-title" style="margin:0"><i class="fas fa-align-left"></i> PRÊMIOS DA VEZ</h3>
+                         <h3 class="portal-title" style="margin:0"><i class="fas fa-list-ol"></i> TOP 10</h3>
                     </div>
                     
-                    <div class="awards-card">
-                        <div class="awards-body">
-                            <p class="award-question">Habbo idealizador do projeto One Habbo?</p>
-                            <div class="award-value">
-                                <span>Prêmio: 15 Night Points</span>
-                                <span class="award-hint">Ex: @Mozart</span>
+                    <div class="music-list vertical-chart">
+                        <!-- #6 -->
+                        <div class="music-item">
+                            <div class="music-item-info">
+                                <span class="music-artist">Mc Cabelinho</span>
+                                <span class="music-song">X1</span>
                             </div>
-                            <div class="award-input-group">
-                                <input type="text" placeholder="@Mozart" class="award-input">
-                                <i class="fas fa-lock input-icon"></i>
+                            <div class="rank-badge-sm badge-secondary">6º</div>
+                        </div>
+                        <!-- #7 -->
+                        <div class="music-item">
+                            <div class="music-item-info">
+                                <span class="music-artist">KayBlack</span>
+                                <span class="music-song">Melhor Só</span>
                             </div>
-                            <button class="award-btn">ENVIAR!</button>
+                            <div class="rank-badge-sm badge-secondary">7º</div>
+                        </div>
+                        <!-- #8 -->
+                        <div class="music-item">
+                            <div class="music-item-info">
+                                <span class="music-artist">Veigh</span>
+                                <span class="music-song">Novo Balanço</span>
+                            </div>
+                            <div class="rank-badge-sm badge-secondary">8º</div>
+                        </div>
+                        <!-- #9 -->
+                        <div class="music-item">
+                            <div class="music-item-info">
+                                <span class="music-artist">Matuê</span>
+                                <span class="music-song">Conexões de Máfia</span>
+                            </div>
+                            <div class="rank-badge-sm badge-secondary">9º</div>
+                        </div>
+                        <!-- #10 -->
+                        <div class="music-item">
+                            <div class="music-item-info">
+                                <span class="music-artist">Orochi</span>
+                                <span class="music-song">Sereia</span>
+                            </div>
+                            <div class="rank-badge-sm badge-secondary">10º</div>
                         </div>
                     </div>
                 </div>
