--- a/frontend/index.html
+++ b/frontend/index.html
@@ -325,7 +325,7 @@
                             </div>
                         </div>
 
-                        <!-- #2-5 List -->
+                        <!-- #2-4 List -->
                         <div class="music-list">
                             <!-- #2 -->
                             <div class="music-item">
@@ -351,25 +351,25 @@
                                 </div>
                                 <div class="rank-badge-sm">4º</div>
                             </div>
-                            <!-- #5 -->
-                            <div class="music-item">
-                                <div class="music-item-info">
-                                    <span class="music-artist">J. Eskine, Alef Donk</span>
-                                    <span class="music-song">Resenha do Arrocha</span>
-                                </div>
-                                <div class="rank-badge-sm">5º</div>
-                            </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Right: Top Music #6-#10 -->
+                <!-- Right: Top Music #5-#8 -->
                 <div class="music-secondary-col">
                     <div class="section-header flex-header" style="margin-bottom: 20px;">
-                         <h3 class="portal-title" style="margin:0"><i class="fas fa-list-ol"></i> TOP 10</h3>
+                         <h3 class="portal-title" style="margin:0"><i class="fas fa-list-ol"></i> CONTINUAÇÃO</h3>
                     </div>
                     
                     <div class="music-list vertical-chart">
+                         <!-- #5 -->
+                         <div class="music-item">
+                            <div class="music-item-info">
+                                <span class="music-artist">J. Eskine, Alef Donk</span>
+                                <span class="music-song">Resenha do Arrocha</span>
+                            </div>
+                            <div class="rank-badge-sm badge-secondary">5º</div>
+                        </div>
                         <!-- #6 -->
                         <div class="music-item">
                             <div class="music-item-info">
@@ -393,22 +393,6 @@
                                 <span class="music-song">Novo Balanço</span>
                             </div>
                             <div class="rank-badge-sm badge-secondary">8º</div>
-                        </div>
-                        <!-- #9 -->
-                        <div class="music-item">
-                            <div class="music-item-info">
-                                <span class="music-artist">Matuê</span>
-                                <span class="music-song">Conexões de Máfia</span>
-                            </div>
-                            <div class="rank-badge-sm badge-secondary">9º</div>
-                        </div>
-                        <!-- #10 -->
-                        <div class="music-item">
-                            <div class="music-item-info">
-                                <span class="music-artist">Orochi</span>
-                                <span class="music-song">Sereia</span>
-                            </div>
-                            <div class="rank-badge-sm badge-secondary">10º</div>
                         </div>
                     </div>
                 </div>
