chore: atualização da logo principal do site para nova versão

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <!-- Right: Large Logo -->
-        <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/logo_transparente-removebg-preview.png?raw=true" alt="One Habbo Logo" class="cloud-logo">
+        <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/Avatar%20com%20emblema%20fundo%20transparente.png?raw=true" alt="One Habbo Logo" class="cloud-logo">
     </div>
 
     <!-- Custom Navbar (Below Cloud Section) -->
