feat: add login/register area to header right side

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,24 @@
 
         <!-- Right: Large Logo -->
         <img src="https://github.com/RZSISTEMAs/one-habbo/blob/master/img/emblema%20sem%20fundo.png?raw=true" alt="One Habbo Logo" class="cloud-logo">
+
+        <!-- Right Lateral: Login/Register Area -->
+        <div class="cloud-login-right">
+            <div class="cloud-info-box login-box-container">
+                <form class="login-form">
+                    <input type="text" placeholder="Nick" class="login-input">
+                    <input type="password" placeholder="Senha" class="login-input">
+                    <button type="submit" class="login-btn-icon"><i class="fas fa-arrow-right"></i></button>
+                </form>
+                <div class="login-links">
+                    <a href="#" class="register-link"><i class="fas fa-user-plus"></i> Registrar</a>
+                    <a href="#" class="forgot-link">Esqueci</a>
+                </div>
+            </div>
+            <div class="cloud-avatar guest-avatar">
+                <img src="https://www.habbo.com.br/habbo-imaging/avatarimage?user=Misterios&direction=4&head_direction=3&gesture=std&size=l" alt="Guest">
+            </div>
+        </div>
     </div>
 
     <!-- Custom Navbar (Below Cloud Section) -->
