refactor: redistribute top music items (2-5 left, 6-9 right)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -343,7 +343,7 @@
                             </div>
                         </div>
 
-                        <!-- #2-4 List -->
+                        <!-- #2-5 List -->
                         <div class="music-list">
                             <!-- #2 -->
                             <div class="music-item">
@@ -369,27 +369,27 @@
                                 </div>
                                 <div class="rank-badge-sm">4º</div>
                             </div>
+                            <!-- #5 (Moved from Right) -->
+                            <div class="music-item">
+                                <div class="music-item-info">
+                                    <span class="music-artist">J. Eskine, Alef Donk</span>
+                                    <span class="music-song">Resenha do Arrocha</span>
+                                </div>
+                                <div class="rank-badge-sm">5º</div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Right: Top Music #5-#8 -->
+                <!-- Right: Top Music #6-#9 -->
                 <div class="music-secondary-col">
                     <div class="section-header flex-header" style="margin-bottom: 20px;">
                          <h3 class="portal-title" style="margin:0"><i class="fas fa-list-ol"></i> CONTINUAÇÃO</h3>
                     </div>
                     
                     <div class="music-list vertical-chart">
-                         <!-- #5 -->
+                         <!-- #6 -->
                          <div class="music-item">
-                            <div class="music-item-info">
-                                <span class="music-artist">J. Eskine, Alef Donk</span>
-                                <span class="music-song">Resenha do Arrocha</span>
-                            </div>
-                            <div class="rank-badge-sm badge-secondary">5º</div>
-                        </div>
-                        <!-- #6 -->
-                        <div class="music-item">
                             <div class="music-item-info">
                                 <span class="music-artist">Mc Cabelinho</span>
                                 <span class="music-song">X1</span>
@@ -411,6 +411,14 @@
                                 <span class="music-song">Novo Balanço</span>
                             </div>
                             <div class="rank-badge-sm badge-secondary">8º</div>
+                        </div>
+                        <!-- #9 (New Item) -->
+                        <div class="music-item">
+                            <div class="music-item-info">
+                                <span class="music-artist">Matuê</span>
+                                <span class="music-song">Vampiro</span>
+                            </div>
+                            <div class="rank-badge-sm badge-secondary">9º</div>
                         </div>
                     </div>
                 </div>
