--- a/frontend/index.html
+++ b/frontend/index.html
@@ -459,12 +459,12 @@
             <div class="footer-col links-col">
                 <h4>Links uteis</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Notícias da Comunidade</a></li>
-                    <li><a href="#">Promoções Ativas</a></li>
                     <li><a href="#">Política de Privacidade</a></li>
                     <li><a href="#">Termos e Condições de Uso</a></li>
                     <li><a href="#">Política de Cookies</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Minha OneHabbo Home</a></li>
+                    <li><a href="#">Dúvidas e Suporte</a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </div>
         </div>
