--- a/frontend/index.html
+++ b/frontend/index.html
@@ -459,9 +459,9 @@
             <div class="footer-col links-col">
                 <h4>Links uteis</h4>
                 <ul class="footer-links">
-                    <li><a href="#">Política de Privacidade</a></li>
-                    <li><a href="#">Termos e Condições de Uso</a></li>
-                    <li><a href="#">Política de Cookies</a></li>
+                    <li><a href="politica-privacidade.html">Política de Privacidade</a></li>
+                    <li><a href="termos-uso.html">Termos e Condições de Uso</a></li>
+                    <li><a href="politica-cookies.html">Política de Cookies</a></li>
                     <li><a href="#">Minha OneHabbo Home</a></li>
                     <li><a href="#">Dúvidas e Suporte</a></li>
                     <li><a href="#">Contato</a></li>
