fix: add missing id to last registered grid on legal pages

--- a/frontend/termos-uso.html
+++ b/frontend/termos-uso.html
@@ -109,7 +109,7 @@
         <div class="footer-upper">
             <div class="footer-col users-col">
                 <h4>Últimos Registrados</h4>
-                <div class="user-grid">
+                <div class="user-grid" id="lastRegisteredGrid">
                     <div class="loading-users">Carregando...</div>
                 </div>
             </div>
