--- a/frontend/politica-privacidade.html
+++ b/frontend/politica-privacidade.html
@@ -107,7 +107,7 @@
         <div class="footer-upper">
             <div class="footer-col users-col">
                 <h4>Últimos Registrados</h4>
-                <div class="user-grid">
+                <div class="user-grid" id="lastRegisteredGrid">
                     <div class="loading-users">Carregando...</div>
                 </div>
             </div>
